Se cambio el diseño de la aplicación, y se creo el diseño de la parte de usuarios.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,7 @@
 
 body {
+  background: #F2F2F2;
+  font-family: 'Open Sans', sans-serif;
   font-size: 16px;
 }
 
@@ -10,12 +12,22 @@ body {
 }
 
 .usuarios {
-  border: 1px solid black;
+  align-self: center;
   width: 9.5%;
 }
+  .usuarios__usuario {
+    display: flex;
+    justify-content: center;
+    margin: 1em;
+  }
+
+  .usuarios__imagen {
+    border-radius: 50%;
+    width: 60%;
+  }
+
 
 .calendario {
-  border: 1px solid black;
   display: flex;
   flex-direction: row;
   width: 89.5%;
@@ -26,13 +38,14 @@ body {
     width: 20%;
   }
   .calendario__label {
-    font-size: 1.4em;
-    font-weight: bold;
-    margin: 0.5em 0em;
+    border-bottom: 5px solid #2980b9;
+    font-size: 1.1em;
+    padding: 0.5em 0em;
     text-align: center;
   }
   .calendario__bloque {
-    border: 1px dotted orange;
+    border: 0.1px solid #bdc3c7;
+    border-top: none;
     height: 95px;
     width: 100%;
   }
