--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,11 +9,12 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  width: 100%;
 }
 
 .usuarios {
   align-self: center;
-  width: 9.5%;
+  flex-grow: 1;
 }
   .usuarios__usuario {
     display: flex;
@@ -30,12 +31,12 @@ body {
 .calendario {
   display: flex;
   flex-direction: row;
-  width: 89.5%;
+  flex-grow: 15;
 }
   .calendario__dia {
     display: flex;
     flex-direction: column;
-    width: 20%;
+    flex-grow: 1;
   }
   .calendario__label {
     border-bottom: 5px solid #2980b9;
@@ -47,5 +48,31 @@ body {
     border: 0.1px solid #bdc3c7;
     border-top: none;
     height: 95px;
-    width: 100%;
+    flex-grow: 2;
   }
+
+.panelUsuario {
+  flex-grow: 2;
+  overflow: hidden;
+}
+
+  .panelUsuario__informacion {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+    .panelUsuario__avatar {
+      margin: 0em;
+    }
+
+    .panelUsuario__avatar img {
+      border-radius: 50%;
+      margin: 0 auto;
+      max-width: 100px;
+    }
+
+      .panelUsuario__label {
+
+      }
