Se completo el isomorfismo de la aplicación, y consistencia de los datos entre el render del servidor, y el render del cliente

--- a/app/views/templates/index.ejs
+++ b/app/views/templates/index.ejs
@@ -11,6 +11,7 @@
 <body>
   <section id="contenido"><%-contenido%></section>
 
+  <script>window.data = <%-data%> </script>
   <script src="javascripts/build.js"></script>
 </body>
 </html>
