--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -1,13 +1,23 @@
+html {
+  height: 100%;
+}
 
 body {
   background: #F2F2F2;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  height: 100%;
+}
+
+#contenido {
+  height: 100%;
 }
 
 .vista {
+  align-items: stretch;
   display: flex;
   flex-direction: row;
+  height: 100%;
   justify-content: center;
   width: 100%;
 }
@@ -32,6 +42,13 @@ body {
   display: flex;
   flex-direction: row;
   flex-grow: 15;
+}
+.calendario-disable {
+  align-items: center;
+  color: #9e9e9e;
+  display: flex;
+  flex-grow: 15;
+  justify-content: center;
 }
   .calendario__dia {
     display: flex;
