--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -39,8 +39,9 @@ body {
 
 
 .calendario {
+  border: 0.1px solid #bdc3c7;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-grow: 15;
 }
 .calendario-disable {
@@ -50,6 +51,15 @@ body {
   flex-grow: 15;
   justify-content: center;
 }
+  .calendario__nombre {
+    border-bottom: 0.1px solid #bdc3c7;
+    margin: 0;
+    text-align: center;
+  }
+  .calendario__dia__contanier {
+    display: flex;
+    flex-direction: row;
+  }
   .calendario__dia {
     display: flex;
     flex-direction: column;
@@ -69,6 +79,7 @@ body {
   }
 
 .panelUsuario {
+  border-right: 0.1px solid #bdc3c7;
   flex-grow: 2;
   overflow: hidden;
 }
@@ -107,4 +118,5 @@ body {
      border-bottom: 0.5px solid #2980b9;
      margin: 0.5em;
      padding-left: 0.5em;
+     cursor: pointer;
    }
