--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -23,6 +23,25 @@ body {
 }
 
 .usuarios {
+  border-left: 0.1px solid #bdc3c7;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: center;
+  max-width: 60px;
+  overflow: hidden;
+}
+  .usuarios__usuario {
+    align-self: center;
+    margin: 0;
+    width: 80%;
+  }
+  .usuarios__imagen {
+    border-radius: 50%;
+    width: 100%;
+  }
+
+/*.usuarios {
   align-self: center;
   flex-grow: 1;
 }
@@ -35,7 +54,7 @@ body {
   .usuarios__imagen {
     border-radius: 50%;
     width: 60%;
-  }
+  }*/
 
 
 .calendario {
