Se implemento socket.io, aún sin funcionalidad.

--- a/app/views/templates/index.ejs
+++ b/app/views/templates/index.ejs
@@ -12,6 +12,7 @@
   <section id="contenido"><%-contenido%></section>
 
   <script>window.data = <%-data%> </script>
+  <script src="/socket.io/socket.io.js"></script>
   <script src="javascripts/build.js"></script>
 </body>
 </html>
