Renamed register path to signup, moved the signup form to a template, implemented get router for signup

--- a/app/view/user/signUpForm.ejs
+++ b/app/view/user/signUpForm.ejs
@@ -2,10 +2,10 @@
 <html lang = "en">
     <head>
         <meta charset="utf-8">
-        <title>Orus</title>
+        <title>Sign Up</title>
     </head>
     <body>
-        <form action="user/add" method="post">
+        <form action="/user/signup" method="post">
             <input type="text" name="username" placeholder="username"> </input>
             <input type="password" name="password" placeholder="password"> </input>
             <input type="text" name="name" placeholder="Name"> </input>
