Modified sign up template

--- a/app/view/user/signUpForm.ejs
+++ b/app/view/user/signUpForm.ejs
@@ -1,17 +1,8 @@
-<!DOCTYPE html>
-<html lang = "en">
-    <head>
-        <meta charset="utf-8">
-        <title>Sign Up</title>
-    </head>
-    <body>
-        <form action="/user/signup" method="post">
-            <input type="text" name="username" placeholder="username"> </input>
-            <input type="password" name="password" placeholder="password"> </input>
-            <input type="text" name="name" placeholder="Name"> </input>
-            <input type="text" name="lastname" placeholder="Lastname"> </input>
-            <input type="text" name="mail" placeholder="Email"> </input>
-            <input type="submit" value="Add">
-        </form>
-    </body>
-</html>
+<form action="/user/signup" method="post">
+    <input type="text" name="username" placeholder="username"> </input>
+    <input type="password" name="password" placeholder="password"> </input>
+    <input type="text" name="name" placeholder="Name"> </input>
+    <input type="text" name="lastname" placeholder="Lastname"> </input>
+    <input type="text" name="email" placeholder="Email"> </input>
+    <input type="submit" value="Add">
+</form>
